Refactoring. Adjusted fileting files by mask. Replaced 'max file size' with 'min file size'.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,8 @@ add_library(bayan
     FileComparer.cpp
     FileImpl.cpp 
     HasherFactory.cpp
-    Util.cpp)
+    StringMatcher.cpp
+    ConversionUtil.cpp)
 
 #rename the executable to "bayan"
 set_target_properties(bayan_cli PROPERTIES OUTPUT_NAME bayan)
