--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ set(BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
 configure_file(Resources.h.in ${CMAKE_CURRENT_BINARY_DIR}/generated_sources/Resources.h @ONLY)
 
-add_executable(bayan_test DirectoryScannerTest.cpp FileComparerTest.cpp UtilTest.cpp)
+add_executable(bayan_test ConversionUtilTest.cpp DirectoryScannerTest.cpp FileComparerTest.cpp StringMatcherTest.cpp)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -14,7 +14,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 target_include_directories(bayan_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/generated_sources)
-target_link_libraries(bayan_test bayan GTest::gtest GTest::gtest_main)
+target_link_libraries(bayan_test bayan GTest::gtest GTest::gtest_main GTest::gmock_main)
 
 include(GoogleTest)
 gtest_discover_tests(bayan_test)
